--- a/main.html
+++ b/main.html
@@ -37,39 +37,107 @@
     function control () {
       document.querySelector('#control').innerHTML = `
       <ul>
-        <li><a href="/create">create</a></li>
-        <li><input type="button" value="delete"></li>
+        <li><a href="/create" onclick="
+          event.preventDefault()
+          store.dispatch {
+            type: 'CHANGE_MODE'
+            mode: 'create'
+          }
+          ">create</a></li>
+        <li><input onclick="
+          store.dispatch {
+            type: 'DELETE'
+          }
+          " type="button" value="delete"></li>
       </ul>
       `
     }
     function article () {
       const state = store.getState()
-      const content = state.contents.filter(e => e.id === state.selected_id)
-      document.querySelector('#content').innerHTML = `
-      <article>
-        <h2>${content[0].title}</h2>
-        ${content[0].desc}
-      </article>
-      `
+      if (state.mode === 'create') {
+        document.querySelector('#content').innerHTML = `
+          <article>
+            <form onsubmit="
+              event.preventDefault()
+              const title = this.title.value
+              const desc = this.desc.value
+              store.dispatch({
+                type: 'CREATE',
+                title: title,
+                desc: desc
+              })
+            ">
+              <p>
+                <input type="text" name="title" placeholder="title" />
+              </p>
+              <p>
+                <textarea name="desc" placeholder="discription"></textarea>
+              </p>
+              <p>
+                <input type="submit" />
+              </p>
+            </form>
+          </article>
+          `
+      } else if (state.mode === 'read') {
+        const content = state.contents.filter(e => e.id === state.selected_id)
+          document.querySelector('#content').innerHTML = `
+          <article>
+            <h2>${content[0].title}</h2>
+            ${content[0].desc}
+          </article>
+          `
+      } else if (state.mode === 'Welcome') {
+        document.querySelector('#content').innerHTML = `
+          <article>
+            <h2>Welcome</h2>
+            Hello, Redux
+          </article>
+          `
+      }
     }
     function reducer (state, action) {
       if (state === undefined) {
         return {
-          selected_id: 1,
+          max_id: 2,
+          mode: 'Welcome',
+          selected_id: 2,
           contents: [
             {id:1, title:'HTML', desc:'HTML is...'},
             {id:2, title:'CSS', desc:'CSS is...'}
           ]
         }
       }
-      let newState = {}
+      let newState
       if (action.type === 'SELECT') {
-        newState = Object.assign(newState, state, {selected_id: action.id})
+        newState = Object.assign({}, state, {selected_id: action.id, mode: 'read'})
+      } else if (action.type === 'CREATE') {
+        let newMax_id = state.max_id + 1
+        let newContents = state.contents.concat() // 배열은 concat
+        newContents.push({id: newMax_id, title: action.title, desc: action.desc})
+        newState = Object.assign({}, state, {
+          max_id: newMax_id,
+          contents: newContents,
+          mode: 'read'
+        })
+      } else if (action.type === 'DELETE') {
+        let newContents = []
+        newContents.push(state.contents.filter( e => e.selected_id !== state.selected_id))
+        console.log(newContents)
+        newState = Object.assign({}, state, {
+          contents: newContents,
+          mode: 'Welcome'
+        })
+      } else if (action.type === 'CHANGE_MODE') {
+        newState = Object.assign({}, state, {
+          mode: action.mode
+        })
       }
       return newState
     }
     const store = Redux.createStore(reducer)
     store.subscribe(article)
+    store.subscribe(TOC)
     subject()
     TOC()
     control()
